# setup-environment-FlorSchroder

./: .gitignore  CMakeLists.txt  FirstProjectInCMake  build.ninja
src/: greetings.c  main.c
tests/unit/: test_unit_program.c
